# rust-service-template

./: .env  .gitignore  .tmplr.yml  Cargo.toml  Dockerfile  build.sh  readme.md  render.yaml
.github/workflows/: general.yml  init.yml
configuration/: base.yaml  production.yaml
migrations/: placeholder.txt
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/auth/: authorization.rs  mod.rs  password_hashing.rs  token.rs
src/db/: mod.rs  sample_broker.rs
src/domain/: mod.rs  sample_model.rs  user_models.rs  valid_email.rs
src/routes/: mod.rs  sample_routes.rs  users.rs
src/util/: mod.rs
tests/api/: health_check.rs  helper.rs  main.rs  sample_test.rs
