[package]
name = "{{ tmplr.project_name }}"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "{{ tmplr.project_name }}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-web-httpauth = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "3"
uuid = { version = "0.8", features = ["serde", "v4"] }
config = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
unicode-segmentation = "1"
validator = "0.14"
base64 = "0.13.0"
anyhow = "1"
derive_more = "0.99"
cached = "0.34"
jsonwebtokens = "1"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
rand = { version = "0.8", features = ["std_rng"] }
urlencoding = "2"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"
wiremock = "0.5"
linkify = "0.8"
url = "2.2.2"